--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,14 @@ body {
     font-family:"Roboto", Arial, Helvetica, sans-serif;
 }
 
+button {
+    cursor:pointer;
+}
+
+a {
+    text-decoration: none;
+    color:#E5E7EB
+}
 
 .intro {
 
@@ -76,7 +84,12 @@ body {
     background-color: #3882F6;
     border-width: 0px;
     padding:8px 24px;
-    color: #F9FAF8
+    color: #F9FAF8;
+    transition-duration: 0.4s;
+}
+.sign-up:hover
+{
+    background-color: #306ccc;    
 }
 
 /* INFO */
@@ -122,7 +135,7 @@ body {
 }
 
 .description {
-    color: #E5E7EB;
+    color: #96999e;
     text-align: center;
 }
 
@@ -181,8 +194,22 @@ body {
 .advertisement-signup-button {
     background-color: #3882F6;
     border: 2px solid #E5E7EB;
-    padding:10px 40px;
+    padding:10px 30px;
     color:#E5E7EB;
     font-weight: bold;
     border-radius: 4px;
+}
+
+/* FOOTER */
+
+.footer {
+    display:flex;
+    padding:25px;
+    background-color:#1F2937;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-message {
+    color:#E5E7EB;
 }
